2001-07-19  Rob Browning  <rlb@defaultvalue.org>

	* box-module/.cvsignore: add .deps

	* box/.cvsignore: add .deps.

2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-module/Makefile.am (TESTS): New variable.
	Create `box' on `make all'.

	* box-module/check.test, box-dynamic-module/check.test,
	* box-dynamic/check.test: New files.

	* box-dynamic/Makefile.am (libbox): Create box library on `make
	all'.
	(TESTS): New variable.

	* box/Makefile.am (TESTS): New variable.  
	Create `box' program on `make all', use freshly built Guile for
	building.

	* box/check.test: New file.

	* modules/check.test, safe/check.test, scripts/check.test: Set
	GUILE_LOAD_PATH to make the tests run without installed Guile.

2001-07-16  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* scripts/check.test: Add check for guile interpreter.
	Fix bug: Use `$guile' everywhere.  Thanks to Martin Grabmueller.

2001-07-16  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* modules/check.test, safe/check.test: New files.

	* modules/Makefile.am (TESTS), safe/Makefile.am (TESTS): New
	variables.

2001-07-14  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* scripts/check.test: New file.

	* Makefile.am (TESTS): New var.

2001-07-14  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* modules/main: Use :renamer for specifying renaming procedure.

2001-07-10  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* scripts/hello (display-version, display-help): Fix comment; nfc.

2001-07-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic/README: Corrected sample session.

	* box-module/box.c, box-dynamic-module/box.c, box-dynamic/box.c
	* box/box.c: scm_bits_t -> scm_t_bits.

2001-06-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* box-dynamic-module/README: Use a better example for box-map, as
	suggested by Thomas Wawrzinek.

2001-06-14  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* scripts/README, scripts/hello.scm, safe/untrusted.scm,