@@ -23,7 +23,9 @@ noinst_PROGRAMS = box
 
 box_SOURCES = box.c
 
-EXTRA_DIST = README
+EXTRA_DIST = README check.test
 
 CFLAGS=-I../..
-LIBS=`GUILE_LOAD_PATH=../.. ../../libguile/guile -e main -s ../../guile-config/guile-config link` -L../../libguile
+LIBS=`GUILE_LOAD_PATH=$(top_srcdir) $(top_builddir)/libguile/guile -e main -s $(top_builddir)/guile-config/guile-config link` -L$(top_builddir)/libguile -L$(top_builddir)/qt
+
+TESTS = check.test
